--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ packages = ["pmk_probes"]
 
 [project]
 name = "pmk-probes"
-version = "1.0.7"
+version = "1.0.9"
 authors = [
   { name="Felix Wenk", email="felix.wenk@pmk.de" },
 ]
@@ -26,3 +26,4 @@ dependencies = [
 [project.urls]
 Homepage = "http://www.pmk.de/"
 Documentation = "https://pmk-probes.readthedocs.io/en/latest/"
+Repository = "https://github.com/fewenk-pmk/pmk-probes"
