docs: Sphinx versioning fixed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
@@ -24,7 +24,10 @@ dependencies = [
 ]
 
 [tool.hatch.version]
-path = "pmk_probes/__init__.py"
+source = "vcs"
+
+[tool.hatch.build.hooks.vcs]
+version-file = "pmk_probes/_version.py"
 
 [project.urls]
 Homepage = "http://www.pmk.de/"
